# Model

./: .replit  README.md  app.py  feature_extraction.py  infer.py  pyproject.toml  replit.md  routes.py  train_model.py
attached_assets/: Pasted-You-are-a-senior-AI-ML-developer-and-solution-architect-building-an-intelligent-AI-ML-based-document-1753031432356_1753031432358.txt
models/: document_classifier.pkl
outputs/: .gitkeep  40928fe7-5a77-496c-bf5b-e8453e0e4474_50_pdf.json  86cb69a7-e0dd-4053-a2e5-5f2da52e3cf0_sample.json
static/: script.js  style.css
templates/: base.html  index.html  loading.html
uploads/: .gitkeep
